force-app/main/default/objects/JobAttempt__c/JobAttempt__c.object-meta.xml
<CustomObject>
    <description>Job Attempt is an attempt of a Job performed at a location. Job Attempt is related to an Exception.</description>
    <label>Job Attempt</label>
    <nameField>
        <displayFormat>JA-{000000000}</displayFormat>
        <label>Job Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>