force-app/main/default/objects/JobAttempt__c/fields/AllowTeamManagement__c.field-meta.xml
<CustomField>
    <fullName>AllowTeamManagement__c</fullName>
    <formula>Job__r.AllowTeamManagement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Team Management</label>
    <type>Checkbox</type>
</CustomField>