force-app/main/default/objects/JobAttempt__c/fields/AssignedContact__c.field-meta.xml
<CustomField>
    <fullName>AssignedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Attempts</relationshipLabel>
    <relationshipName>Job_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>