force-app/main/default/objects/JobAttempt__c/fields/AssignedContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactFirstName__c</fullName>
    <formula>AssignedContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact First Name</label>
    <type>Text</type>
</CustomField>