force-app/main/default/objects/JobAttempt__c/fields/AssignedContactHomeLatitude__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactHomeLatitude__c</fullName>
    <formula>AssignedContact__r.HomeGeoLocation__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact Home Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>