force-app/main/default/objects/JobAttempt__c/fields/AssignedContactHomeLongitude__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactHomeLongitude__c</fullName>
    <formula>AssignedContact__r.HomeGeoLocation__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact Home Longitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>