force-app/main/default/objects/JobAttempt__c/fields/AssignedContactId__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactId__c</fullName>
    <label>Assigned Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>