force-app/main/default/objects/JobAttempt__c/fields/AssignedContactLastName__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactLastName__c</fullName>
    <formula>AssignedContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact Last Name</label>
    <type>Text</type>
</CustomField>