force-app/main/default/objects/JobAttempt__c/fields/AssignedContactPhone__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactPhone__c</fullName>
    <formula>AssignedContact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact Phone</label>
    <type>Text</type>
</CustomField>