force-app/main/default/objects/JobAttempt__c/fields/AssignedContactTitle__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactTitle__c</fullName>
    <formula>AssignedContact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact Title</label>
    <type>Text</type>
</CustomField>