force-app/main/default/objects/JobAttempt__c/fields/AssignedEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>AssignedEmployeeId__c</fullName>
    <formula>AssignedContact__r.EmployeeId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Employee ID</label>
    <type>Text</type>
</CustomField>