force-app/main/default/objects/JobAttempt__c/fields/AttemptedDate__c.field-meta.xml
<CustomField>
    <fullName>AttemptedDate__c</fullName>
    <description>Date that the Rep actually attempted to execute the work.</description>
    <inlineHelpText>Date that the Rep actually attempted to execute the work.</inlineHelpText>
    <label>Attempted Date</label>
    <type>Date</type>
</CustomField>