force-app/main/default/objects/JobAttempt__c/fields/AttemptReason__c.field-meta.xml
<CustomField>
    <fullName>AttemptReason__c</fullName>
    <label>Attempt Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>