force-app/main/default/objects/JobAttempt__c/fields/AttemptResponsibleExecutionCompany__c.field-meta.xml
<CustomField>
    <fullName>AttemptResponsibleExecutionCompany__c</fullName>
    <label>Attempt Responsible Execution Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>