force-app/main/default/objects/JobAttempt__c/fields/AttemptResponsibleExecutionCompanyLogo__c.field-meta.xml
<CustomField>
    <fullName>AttemptResponsibleExecutionCompanyLogo__c</fullName>
    <label>AttemptResponsibleExecutionCompanyLogo</label>
    <type>Url</type>
</CustomField>