force-app/main/default/objects/JobAttempt__c/fields/AttemptScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>AttemptScheduleDate__c</fullName>
    <label>Attempt Scheduled Date</label>
    <type>Date</type>
</CustomField>