force-app/main/default/objects/JobAttempt__c/fields/AttemptScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>AttemptScheduledDate__c</fullName>
    <label>Date Scheduled</label>
    <type>DateTime</type>
</CustomField>