force-app/main/default/objects/JobAttempt__c/fields/AttemptSequence__c.field-meta.xml
<CustomField>
    <fullName>AttemptSequence__c</fullName>
    <label>Attempt Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>