force-app/main/default/objects/JobAttempt__c/fields/AttemptSequencePadded__c.field-meta.xml
<CustomField>
    <fullName>AttemptSequencePadded__c</fullName>
    <formula>LPAD(TEXT(AttemptSequence__c), 3, &#39;0&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attempt Sequence Padded</label>
    <type>Text</type>
</CustomField>