force-app/main/default/objects/JobAttempt__c/fields/AttemptType__c.field-meta.xml
<CustomField>
    <fullName>AttemptType__c</fullName>
    <label>Attempt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORIGINAL</fullName>
            </value>
            <value>
                <fullName>RE-ATTEMPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>