force-app/main/default/objects/JobAttempt__c/fields/DateAttempted__c.field-meta.xml
<CustomField>
    <fullName>DateAttempted__c</fullName>
    <label>Date Attempted</label>
    <type>DateTime</type>
</CustomField>