force-app/main/default/objects/JobAttempt__c/fields/DateCanceled__c.field-meta.xml
<CustomField>
    <fullName>DateCanceled__c</fullName>
    <label>Date Canceled</label>
    <type>DateTime</type>
</CustomField>