force-app/main/default/objects/JobAttempt__c/fields/DateClosed__c.field-meta.xml
<CustomField>
    <fullName>DateClosed__c</fullName>
    <label>Date Closed</label>
    <type>DateTime</type>
</CustomField>