force-app/main/default/objects/JobAttempt__c/fields/DateOriginallyReported__c.field-meta.xml
<CustomField>
    <fullName>DateOriginallyReported__c</fullName>
    <label>Date Originally Reported</label>
    <type>DateTime</type>
</CustomField>