force-app/main/default/objects/JobAttempt__c/fields/DateReported__c.field-meta.xml
<CustomField>
    <fullName>DateReported__c</fullName>
    <label>Date Reported</label>
    <type>DateTime</type>
</CustomField>