force-app/main/default/objects/JobAttempt__c/fields/DateStarted__c.field-meta.xml
<CustomField>
    <fullName>DateStarted__c</fullName>
    <label>Date Started</label>
    <type>DateTime</type>
</CustomField>