force-app/main/default/objects/JobAttempt__c/fields/ECAttemptId__c.field-meta.xml
<CustomField>
    <fullName>ECAttemptId__c</fullName>
    <label>EC Attempt ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>