force-app/main/default/objects/JobAttempt__c/fields/ECAttemptStatus__c.field-meta.xml
<CustomField>
    <fullName>ECAttemptStatus__c</fullName>
    <label>EC Attempt Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>