force-app/main/default/objects/JobAttempt__c/fields/ECProjectId__c.field-meta.xml
<CustomField>
    <fullName>ECProjectId__c</fullName>
    <label>EC Project Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>