force-app/main/default/objects/JobAttempt__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception</label>
    <referenceTo>Exception__c</referenceTo>
    <relationshipLabel>Job Attempts</relationshipLabel>
    <relationshipName>Job_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>