force-app/main/default/objects/JobAttempt__c/fields/ExceptionCode__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCode__c</fullName>
    <label>Exception Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>