force-app/main/default/objects/JobAttempt__c/fields/ExceptionComments__c.field-meta.xml
<CustomField>
    <fullName>ExceptionComments__c</fullName>
    <label>Exception Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>