force-app/main/default/objects/JobAttempt__c/fields/ExceptionCommentsLong__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCommentsLong__c</fullName>
    <label>Exception Comments Long</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>