force-app/main/default/objects/JobAttempt__c/fields/ExceptionName__c.field-meta.xml
<CustomField>
    <fullName>ExceptionName__c</fullName>
    <formula>Exception__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception Name</label>
    <type>Text</type>
</CustomField>