force-app/main/default/objects/JobAttempt__c/fields/ExceptionReason__c.field-meta.xml
<CustomField>
    <fullName>ExceptionReason__c</fullName>
    <label>Exception Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>