force-app/main/default/objects/JobAttempt__c/fields/ExceptionReportedGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>ExceptionReportedGeoLocation__c</fullName>
    <description>Exception reported Geo location</description>
    <inlineHelpText>Exception reported Geo location</inlineHelpText>
    <label>ExceptionReportedGeoLocation</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>