force-app/main/default/objects/JobAttempt__c/fields/ExpectedNumberofWorkers__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNumberofWorkers__c</fullName>
    <label>Expected Number of Workers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>