force-app/main/default/objects/JobAttempt__c/fields/FailedQC__c.field-meta.xml
<CustomField>
    <fullName>FailedQC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed QC</label>
    <type>Checkbox</type>
</CustomField>