force-app/main/default/objects/JobAttempt__c/fields/IsExecuted__c.field-meta.xml
<CustomField>
    <fullName>IsExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Executed</label>
    <type>Checkbox</type>
</CustomField>