force-app/main/default/objects/JobAttempt__c/fields/IsShift__c.field-meta.xml
<CustomField>
    <fullName>IsShift__c</fullName>
    <formula>Job__r.IsShift__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Shift</label>
    <type>Checkbox</type>
</CustomField>