force-app/main/default/objects/JobAttempt__c/fields/IsStartedOnTime__c.field-meta.xml
<CustomField>
    <fullName>IsStartedOnTime__c</fullName>
    <formula>IF($Setup.OneHubCustomSetting__c.StoreStartTimeGrace__c &gt;= StartTimeDelay__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Started On Time</label>
    <type>Checkbox</type>
</CustomField>