force-app/main/default/objects/JobAttempt__c/fields/IsTask__c.field-meta.xml
<CustomField>
    <fullName>IsTask__c</fullName>
    <formula>Job__r.IsTask__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Task</label>
    <type>Checkbox</type>
</CustomField>