force-app/main/default/objects/JobAttempt__c/fields/LocationTimeReported__c.field-meta.xml
<CustomField>
    <fullName>LocationTimeReported__c</fullName>
    <label>Location Time Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>