force-app/main/default/objects/JobAttempt__c/fields/ManagerComment__c.field-meta.xml
<CustomField>
    <fullName>ManagerComment__c</fullName>
    <label>Manager Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>