force-app/main/default/objects/JobAttempt__c/fields/ManagerSignatureAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>ManagerSignatureAttachmentId__c</fullName>
    <label>Manager Signature Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>