force-app/main/default/objects/JobAttempt__c/fields/ManagerSignatureContentType__c.field-meta.xml
<CustomField>
    <fullName>ManagerSignatureContentType__c</fullName>
    <label>Manager Signature Content Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>