force-app/main/default/objects/JobAttempt__c/fields/NumberofImages__c.field-meta.xml
<CustomField>
    <fullName>NumberofImages__c</fullName>
    <label>Number of Images</label>
    <summaryForeignKey>JobImage__c.JobAttempt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>