force-app/main/default/objects/JobAttempt__c/fields/NumberOfReschedules__c.field-meta.xml
<CustomField>
    <fullName>NumberOfReschedules__c</fullName>
    <label>Number of Reschedules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>