force-app/main/default/objects/JobAttempt__c/fields/PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>PercentComplete__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>