force-app/main/default/objects/JobAttempt__c/fields/PrimaryJobAttemptWorker__c.field-meta.xml
<CustomField>
    <fullName>PrimaryJobAttemptWorker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Job Attempt Worker</label>
    <referenceTo>JobAttemptWorker__c</referenceTo>
    <relationshipLabel>Job Attempts</relationshipLabel>
    <relationshipName>Job_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>