force-app/main/default/objects/JobAttempt__c/fields/PrimarySupervisorEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimarySupervisorEmail__c</fullName>
    <formula>PrimaryJobAttemptWorker__r.SupervisorEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrimarySupervisorEmail</label>
    <type>Text</type>
</CustomField>