force-app/main/default/objects/JobAttempt__c/fields/PrimaryWorkerEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryWorkerEmail__c</fullName>
    <formula>PrimaryJobAttemptWorker__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrimarytWorkerEmail</label>
    <type>Text</type>
</CustomField>