force-app/main/default/objects/JobAttempt__c/fields/QCFailureComments__c.field-meta.xml
<CustomField>
    <fullName>QCFailureComments__c</fullName>
    <label>QC Failure Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>