force-app/main/default/objects/JobAttempt__c/fields/QCFailureReasonCode__c.field-meta.xml
<CustomField>
    <fullName>QCFailureReasonCode__c</fullName>
    <label>QC Failure Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEED A CODE</fullName>
            </value>
            <value>
                <fullName>Inconclusive Reporting</fullName>
            </value>
            <value>
                <fullName>Job Incomplete</fullName>
            </value>
            <value>
                <fullName>Incorrect Photo Uploaded</fullName>
            </value>
            <value>
                <fullName>Store Manager Complaint</fullName>
            </value>
            <value>
                <fullName>Client Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>