force-app/main/default/objects/JobAttempt__c/fields/ReportedContact__c.field-meta.xml
<CustomField>
    <fullName>ReportedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Attempts (Reported Contact)</relationshipLabel>
    <relationshipName>Job_Attempts2</relationshipName>
    <type>Lookup</type>
</CustomField>