force-app/main/default/objects/JobAttempt__c/fields/ReportedContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactFirstName__c</fullName>
    <formula>ReportedContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Contact First Name</label>
    <type>Text</type>
</CustomField>