force-app/main/default/objects/JobAttempt__c/fields/ReportedContactHomeLatitude__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactHomeLatitude__c</fullName>
    <formula>ReportedContact__r.HomeGeoLocation__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Contact Home Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>