force-app/main/default/objects/JobAttempt__c/fields/ReportedContactHomeLongitude__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactHomeLongitude__c</fullName>
    <formula>ReportedContact__r.HomeGeoLocation__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Contact Home Longitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>