force-app/main/default/objects/JobAttempt__c/fields/ReportedContactId__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactId__c</fullName>
    <label>Reported Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>