force-app/main/default/objects/JobAttempt__c/fields/ReportedContactLastName__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactLastName__c</fullName>
    <formula>ReportedContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Contact Last Name</label>
    <type>Text</type>
</CustomField>