force-app/main/default/objects/JobAttempt__c/fields/ReportedContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactPhone__c</fullName>
    <formula>ReportedContact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Contact Phone</label>
    <type>Text</type>
</CustomField>