force-app/main/default/objects/JobAttempt__c/fields/ReportedContactTitle__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactTitle__c</fullName>
    <formula>ReportedContact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported  Contact Title</label>
    <type>Text</type>
</CustomField>