force-app/main/default/objects/JobAttempt__c/fields/ReportedEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ReportedEmployeeId__c</fullName>
    <formula>ReportedContact__r.EmployeeId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Employee Id</label>
    <type>Text</type>
</CustomField>