force-app/main/default/objects/JobAttempt__c/fields/ScheduledDateTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDateTime__c</fullName>
    <label>Scheduled Date Time (UTC)</label>
    <type>DateTime</type>
</CustomField>