force-app/main/default/objects/JobAttempt__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <formula>Job__r.Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Id</label>
    <type>Text</type>
</CustomField>