force-app/main/default/objects/JobAttempt__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>