force-app/main/default/objects/JobAttempt__c/fields/StartTimeDelay__c.field-meta.xml
<CustomField>
    <fullName>StartTimeDelay__c</fullName>
    <formula>If(ISNULL( DateStarted__c), (NOW() -ScheduledDateTime__c) * 24 * 60,
(DateStarted__c - ScheduledDateTime__c) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start time Delay(Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>