force-app/main/default/objects/JobAttempt__c/fields/TeamLeadContactId__c.field-meta.xml
<CustomField>
    <fullName>TeamLeadContactId__c</fullName>
    <formula>PrimaryJobAttemptWorker__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead Contact Id</label>
    <type>Text</type>
</CustomField>