force-app/main/default/objects/JobAttempt__c/fields/TeamLeadUserId__c.field-meta.xml
<CustomField>
    <fullName>TeamLeadUserId__c</fullName>
    <formula>PrimaryJobAttemptWorker__r.UserId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TeamLeadUserId</label>
    <type>Text</type>
</CustomField>