force-app/main/default/objects/JobAttempt__c/fields/TimeReported__c.field-meta.xml
<CustomField>
    <fullName>TimeReported__c</fullName>
    <label>Time Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>