force-app/main/default/objects/JobAttempt__c/fields/TimeReportedCalculated__c.field-meta.xml
<CustomField>
    <fullName>TimeReportedCalculated__c</fullName>
    <formula>IF (OR(ISBLANK(TimeReported__c),ISNULL(TimeReported__c)),TotalInStoreBillableTime__c,TimeReported__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Reported Calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>