force-app/main/default/objects/JobAttempt__c/fields/TotalInStoreBillableTime__c.field-meta.xml
<CustomField>
    <fullName>TotalInStoreBillableTime__c</fullName>
    <label>Total In-Store Billable Time</label>
    <summarizedField>JobAttemptWorker__c.TotalInStoreBillableTime__c</summarizedField>
    <summaryForeignKey>JobAttemptWorker__c.JobAttempt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>