force-app/main/default/objects/JobAttempt__c/fields/TotalInStoreNonBillableTime__c.field-meta.xml
<CustomField>
    <fullName>TotalInStoreNonBillableTime__c</fullName>
    <label>Total In-Store Non Billable Time</label>
    <summarizedField>JobAttemptWorker__c.TotalInStoreNonBillableTime__c</summarizedField>
    <summaryForeignKey>JobAttemptWorker__c.JobAttempt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>