force-app/main/default/objects/JobAttempt__c/fields/TotalInStoreTime__c.field-meta.xml
<CustomField>
    <fullName>TotalInStoreTime__c</fullName>
    <label>Total In-Store Time</label>
    <summarizedField>JobAttemptWorker__c.TotalInStoreTime__c</summarizedField>
    <summaryForeignKey>JobAttemptWorker__c.JobAttempt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>