force-app/main/default/objects/JobAttempt__c/validationRules/attempted_date_not_before_scheduled_date.validationRule-meta.xml
<ValidationRule>
    <fullName>attempted_date_not_before_scheduled_date</fullName>
    <active>true</active>
    <description>A Job with a Scheduling Option of User or System cannot have a Date Attempted that occurs before the Attempt Schedule Date where a job attempt is reported.</description>
    <errorConditionFormula>AND(ISPICKVAL(AttemptStatus__c,&#39;Reported&#39;), OR( (Job__r.ProjectScheduleOptionName__c == &#39;USER&#39;), (Job__r.ProjectScheduleOptionName__c == &#39;SYSTEM&#39;))
,AttemptedDate__c &lt; AttemptScheduleDate__c)</errorConditionFormula>
    <errorDisplayField>AssignedContact__c</errorDisplayField>
    <errorMessage>A Job with a Scheduling Option of User or System cannot have a Date Attempted that occurs before the Attempt Schedule Date.</errorMessage>
</ValidationRule>