force-app/main/default/objects/JobAttempt__c/validationRules/Disallow_past_schedule_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_past_schedule_dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(AttemptScheduleDate__c), AttemptScheduleDate__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Cannot schedule an attempt to a date that is in the past.</errorMessage>
</ValidationRule>