force-app/main/default/objects/JobAttempt__c/validationRules/Prevent_Updates_to_Inactive_Attempts.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Updates_to_Inactive_Attempts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(IsActive__c) == false, ISCHANGED(LastModifiedDate))</errorConditionFormula>
    <errorMessage>Inactive Attempts cannot be modified.</errorMessage>
</ValidationRule>