force-app/main/default/objects/JobAttempt__c/validationRules/Reported_DateAttempted_And_time_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reported_DateAttempted_And_time_Required</fullName>
    <active>true</active>
    <description>A Job cannot be reported without the Time Reported and Attempted Date.</description>
    <errorConditionFormula>AND(ISPICKVAL(AttemptStatus__c,&#39;Reported&#39;),
OR((TimeReported__c == null),
(AttemptedDate__c == null)) 
)</errorConditionFormula>
    <errorMessage>A Job cannot be reported without the Time Reported and Attempted Date.</errorMessage>
</ValidationRule>