force-app/main/default/objects/JobAttempt__c/validationRules/ReportedScheduledDateLaterThanNow.validationRule-meta.xml
<ValidationRule>
    <fullName>ReportedScheduledDateLaterThanNow</fullName>
    <active>true</active>
    <description>A Job with a Scheduling Option of User or System cannot be Reported if the Attempt Schedule Date is in the future.</description>
    <errorConditionFormula>AND(ISPICKVAL(AttemptStatus__c,&#39;Reported&#39;), OR( (Job__r.ProjectScheduleOptionName__c == &#39;USER&#39;), (Job__r.ProjectScheduleOptionName__c == &#39;SYSTEM&#39;))
,AttemptScheduleDate__c &gt; TODAY())</errorConditionFormula>
    <errorMessage>A Job with a Scheduling Option of User or System cannot be Reported if the Attempt Schedule Date is in the future.</errorMessage>
</ValidationRule>